@@ -187,8 +187,47 @@ void SetEnvironmentVariables(void)
         (void)SetEnvironmentVariable("UD_DRY_RUN","1");
 }
 
+/**
+ * @brief Validates GUI options
+ * by passing them through Lua
+ * interpreter.
+ */
+static void ValidateGUIOptions(char *file)
+{
+    FILE *f;
+    char cmd[MAX_PATH];
+    char buffer[MAX_PATH];
+    STARTUPINFO si;
+    PROCESS_INFORMATION pi;
+    
+    /* check file existence */
+    f = fopen(file,"r");
+    if(f) fclose(f);
+    else return;
+
+    /* run Lua interpreter */
+    strcpy(cmd,".\\lua5.1a_gui.exe");
+    _snprintf(buffer,MAX_PATH,".\\lua5.1a_gui.exe \"%s\"",file);
+    buffer[MAX_PATH - 1] = 0;
+
+    ZeroMemory(&si,sizeof(si));
+    si.cb = sizeof(si);
+    si.dwFlags = STARTF_USESHOWWINDOW;
+    si.wShowWindow = SW_SHOW;
+    ZeroMemory(&pi,sizeof(pi));
+
+    if(!CreateProcess(cmd,buffer,
+      NULL,NULL,FALSE,0,NULL,NULL,&si,&pi)){
+        WgxDbgPrintLastError("Cannot execute lua5.1a_gui.exe program");
+        return;
+    }
+    CloseHandle(pi.hProcess);
+    CloseHandle(pi.hThread);
+}
+
 void GetPrefs(void)
 {
+    ValidateGUIOptions(".\\options\\guiopts.lua");
     WgxGetOptions(".\\options\\guiopts.lua",read_only_options);
     WgxGetOptions(".\\options\\guiopts-internals.lua",internal_options);
     
